[package]
name = "f103_uart2can_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
nb = "1.0.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
bxcan = "0.6.2"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103"]